Started work on UI

--- a/App/App/App.csproj
+++ b/App/App/App.csproj
@@ -49,12 +49,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppButton.cs" />
+    <Compile Include="AppColor.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="Layout.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="AppPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
@@ -83,6 +88,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bg_mountains.png" />
+    <Content Include="Resources\photo_add.png" />
+    <Content Include="Resources\photo_collection.png" />
+    <Content Include="Resources\settings.png" />
+    <None Include="Resources\SettingsCog.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
