--- a/PictureTagger_UI_WinForms/PictureTagger_UI_WinForms/PictureTagger_UI_WinForms.csproj
+++ b/PictureTagger_UI_WinForms/PictureTagger_UI_WinForms/PictureTagger_UI_WinForms.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7E3819E1-5BA7-471A-9643-E5962F200561}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>App</RootNamespace>
-    <AssemblyName>App</AssemblyName>
+    <RootNamespace>PictureTagger_UI_WinForms</RootNamespace>
+    <AssemblyName>PictureTagger</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>PictureTagger_UI_WinForms.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -94,6 +97,12 @@
     <Content Include="Resources\photo_add.png" />
     <Content Include="Resources\photo_collection.png" />
     <Content Include="Resources\settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\PictureTagger_System\PictureTagger_System.csproj">
+      <Project>{bce4b29f-7d34-49a0-ab8b-14d7a5f0edf6}</Project>
+      <Name>PictureTagger_System</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
