--- a/PictureTagger/PictureTagger_System/PictureTagger_System.csproj
+++ b/PictureTagger/PictureTagger_System/PictureTagger_System.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="PictureAnalyzer.cs" />
     <Compile Include="PTData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PTPicture.cs" />
