--- a/PictureTagger/PictureTagger_UI_WinForms/PictureTagger_UI_WinForms.csproj
+++ b/PictureTagger/PictureTagger_UI_WinForms/PictureTagger_UI_WinForms.csproj
@@ -69,6 +69,9 @@
   <ItemGroup>
     <Compile Include="AppButton.cs" />
     <Compile Include="AppColor.cs" />
+    <Compile Include="CustomControls\PlaceholderTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Extensions.cs" />
     <Compile Include="Layout.cs" />
     <Compile Include="MainPanel.cs">
