--- a/PictureTagger/PictureTagger_UI/PictureTagger_UI.csproj
+++ b/PictureTagger/PictureTagger_UI/PictureTagger_UI.csproj
@@ -63,6 +63,12 @@
     <Compile Include="PTPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="PTTag.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PTTag.Designer.cs">
+      <DependentUpon>PTTag.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="PTMain.resx">
       <DependentUpon>PTMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -77,6 +83,9 @@
     </Compile>
     <EmbeddedResource Include="PTOptions.resx">
       <DependentUpon>PTOptions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PTTag.resx">
+      <DependentUpon>PTTag.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
