--- a/PictureTagger/PictureTagger_System/PictureTagger_System.csproj
+++ b/PictureTagger/PictureTagger_System/PictureTagger_System.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -56,11 +57,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="PictureAnalyzer.cs" />
     <Compile Include="PTData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PTPicture.cs" />
+    <Compile Include="PTTag.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
